# grok-build

./: .gitignore  AGENTS.md  Cargo.toml  FORK.md  README.md  RESIDUAL.md  flake.nix  justfile
.agents/plans/: plan-phase-d-debt-and-remaining.md
.github/workflows/: ci.yml
crates/codegen/grok-bitcoin-cdk-mint/: Cargo.toml  README.md
crates/codegen/grok-bitcoin-cdk-mint/src/: main.rs
crates/codegen/grok-bitcoin-ldk-node/: Cargo.toml  README.md
crates/codegen/grok-bitcoin-ldk-node/src/: main.rs
crates/codegen/grok-bitcoin-wallet/: Cargo.toml  README.md  SECURITY.md
crates/codegen/grok-bitcoin-wallet/src/: address_ux.rs  bdk_sync.rs  cashu.rs  cashu_cdk_helper.rs  chain_select.rs  descriptor_wallet.rs  electrum.rs  error.rs  esplora.rs  explorer.rs  funding_cli.rs  lib.rs  lightning.rs  lightning_ldk.rs  mnemonic.rs  nip06.rs  nip98.rs  onchain.rs  routstr_invoice.rs  seed_vault.rs  watcher.rs
crates/codegen/grok-bitcoin-wallet/src/descriptor_wallet/: broadcast.rs  chain_source.rs  coin_select.rs  fee.rs  finalize.rs  gap.rs  mod.rs  psbt_build.rs  sign_bip84.rs  spend_prepare.rs  tests.rs  types.rs  wallet.rs
crates/codegen/grok-bitcoin-wallet/src/descriptor_wallet/bare_tapscript/: and_v_checksig.rs  and_v_dual_hash.rs  and_v_multi_pk.rs  and_v_or.rs  and_v_pk_hash_lock.rs  combinators.rs  common.rs  hash.rs  mod.rs  multi_a.rs  older_after.rs  or_c.rs  or_i_basic.rs  or_i_product.rs  thresh.rs
crates/codegen/xai-chat-state/src/: types.rs
crates/codegen/xai-grok-config/src/: shell.rs
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager/docs/user-guide/: 05-configuration.md
crates/codegen/xai-grok-pager/src/app/: actions.rs  app_view.rs  cli.rs  event_loop.rs  mod.rs  mouse.rs  screen_mode_relaunch.rs
crates/codegen/xai-grok-pager/src/app/agent_view/: mod.rs  render.rs  session.rs
crates/codegen/xai-grok-pager/src/app/dispatch/: billing.rs  mod.rs  prompt.rs  router.rs  routstr.rs  task_result.rs
crates/codegen/xai-grok-pager/src/app/dispatch/session/: fork.rs  lifecycle.rs  load.rs
crates/codegen/xai-grok-pager/src/app/dispatch/settings/: ui.rs
crates/codegen/xai-grok-pager/src/app/dispatch/tests/: billing.rs  mod.rs  settings.rs
crates/codegen/xai-grok-pager/src/app/effects/: helpers.rs  mod.rs
crates/codegen/xai-grok-pager/src/slash/commands/: mod.rs  routstr.rs
crates/codegen/xai-grok-pager/src/views/: credit_bar.rs  mod.rs  routstr_passphrase_modal.rs
crates/codegen/xai-grok-pager/src/views/settings_modal/: tests.rs
crates/codegen/xai-grok-pager/src/views/welcome/: mod.rs
crates/codegen/xai-grok-pager/tests/: settings_e2e.rs
crates/codegen/xai-grok-sampler/src/: client.rs  config.rs  lib.rs
crates/codegen/xai-grok-sampler/src/actor/: request_task.rs  state.rs
crates/codegen/xai-grok-sampler/tests/: test_actor.rs
crates/codegen/xai-grok-sampler/tests/support/: mod.rs
crates/codegen/xai-grok-sampling-types/src/: error.rs
crates/codegen/xai-grok-shell/: Cargo.toml  README.md
crates/codegen/xai-grok-shell/src/agent/: config.rs
crates/codegen/xai-grok-shell/src/agent/mvp_agent/: agent_ops.rs
crates/codegen/xai-grok-shell/src/agent/subagent/: handle_request.rs  mod.rs
crates/codegen/xai-grok-shell/src/auth/: mod.rs  routstr.rs
crates/codegen/xai-grok-shell/src/session/acp_session_impl/: model_switch.rs  run_loop.rs  sampler_turn.rs
crates/codegen/xai-grok-shell/src/session/acp_session_tests/: auth_error_no_retry_tests.rs  cancel_running_task_tests.rs  idle_resume_tests.rs  inline_auto_compact_flow_tests.rs
crates/codegen/xai-grok-shell/src/session/helpers/: session_compact.rs
crates/codegen/xai-grok-shell/src/terminal/: streaming_local_terminal.rs
crates/codegen/xai-grok-shell/src/test_support/: lsp_runtime.rs
crates/codegen/xai-grok-shell/src/tools/: config.rs
crates/codegen/xai-grok-shell/src/trace_classifier/: mod.rs
crates/codegen/xai-grok-shell/src/util/config/: persist.rs
crates/codegen/xai-grok-shell/tests/common/: mod.rs
docs/: upstream-history.md  upstream-onto-log.md
docs/bitcoin-routstr/: ADDRESS_UX.md  AUTOMATIC_FUNDING.md  DECISIONS.md  FUNDING_FLOW.md  README.md  ROUTSTR_INFERENCE.md  SEED_AND_DERIVATION.md  THREAT_MODEL.md
packaging/aur/: README.md
packaging/aur/grok-bitcoin-ldk-node/: PKGBUILD
scripts/: bitcoin-routstr-validate.sh  put-history-on-xai.sh
