[package]
name = "grok-bitcoin-wallet"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Bitcoin wallet + SeedVault foundations for Routstr-funded Grok OSS inference (Surmount)"
authors = ["Surmount"]
readme = "README.md"

# Heavy BDK/LDK/CDK deps are intentionally not wired yet. Phase 0 ships
# reasoning docs + a compile-only placeholder so the path and SECURITY.md
# exist before real-money code. See docs/bitcoin-routstr/.

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
