[package]
name = "grok-bitcoin-wallet"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Bitcoin wallet + SeedVault foundations for Routstr-funded Grok OSS inference (Surmount)"
authors = ["Surmount"]
readme = "README.md"

# SeedVault + BIP-39 + NIP-06 + address UX + funding wizard types.
# Heavy LDK/CDK remain feature-gated / stubbed. See RESIDUAL.md.

[features]
default = ["keyring-store", "nip06", "onchain-address", "qr"]
# OS keyring backend for SeedVault (disable in constrained CI if needed).
keyring-store = ["dep:keyring"]
# NIP-06 Nostr derivation via `nostr` crate.
nip06 = ["dep:nostr"]
# BIP84 receive address derivation (bitcoin + bip32).
onchain-address = ["dep:bitcoin"]
# Terminal/matrix QR generation for payment displays.
qr = ["dep:qrcode"]
# Real HTTP client for mempool.space (reqwest blocking). Off by default so CI
# stays offline-safe; enable for local integration / ignored network tests.
explorer-http = ["dep:reqwest"]
# Esplora REST ChainSource + TxBroadcaster live HTTP (`HttpEsploraTransport` /
# POST /tx via reqwest). Offline: pure parsers + `MockEsploraTransport` always
# available with `onchain-address`. Do **not** enable in default CI (no forced network).
esplora = ["dep:reqwest"]
# Electrum JSON-RPC ChainSource + TxBroadcaster live TCP + TLS
# (`TcpElectrumTransport` / `TlsElectrumTransport` + blockchain.transaction.broadcast).
# Offline: pure scripthash/listunspent/broadcast parse + `MockElectrumTransport`
# always available with `onchain-address`. TLS uses pure-Rust rustls + WebPKI
# roots (no dangerous skip-verify). Do **not** enable in default CI (no forced network).
electrum = ["dep:rustls", "dep:webpki-roots"]
# Reserved feature names for future CDK / LDK deps (RESIDUAL.md P3/P4).
# Empty today: enabling the flag does **not** wire a backend or flip live
# capability flags. `default_*_backend()` still returns stubs. Do not enable
# in default CI until real deps land and tests go green.
cashu-cdk = []
ldk = []

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
bip39 = { workspace = true }
getrandom = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }

keyring = { workspace = true, optional = true }
nostr = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true }
qrcode = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["blocking", "rustls-tls"], default-features = false }
# Electrum TLS (feature `electrum`): pure-Rust rustls + Mozilla WebPKI roots.
# Aligns with reqwest's rustls-tls choice; not enabled by default.
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
